--- a/src/Components/navigation.css
+++ b/src/Components/navigation.css
@@ -7,3 +7,15 @@
 .navigation_list  {
     text-align: center;
 }
+
+.navigation_link {
+    color: antiquewhite;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: "Segoe UI";
+}
+
+.navigation_link:hover {
+    color: #006dbf;
+    text-decoration: none;
+}
